# crimson-eagle-recipe-app

./: .env  package-lock.json  package.json  recipeplan.md
backend/: .gitignore  Cargo.toml  Rocket.toml  readme.md
backend/migations/2023-06-30-153249_instruction/: up.sql
backend/migations/2023-06-30-153306_ingredient/: down.sql
backend/migrations/2023-06-30-153218_recipe/: down.sql  up.sql
backend/migrations/2023-06-30-153249_instruction/: down.sql  up.sql
backend/migrations/2023-06-30-153300_recipe_ingredient/: down.sql  up.sql
backend/migrations/2023-06-30-153306_ingredient/: down.sql  up.sql
backend/migrations/2023-07-04-203820_create_users/: up.sql
backend/migrations/2023-07-11-000000_bookmark/: up.sql
backend/migrations/2023-07-11-000000_recipe_add_columns/: down.sql  up.sql
backend/migrations/2023-07-11-000000_recipe_add_image/: down.sql  up.sql
backend/migrations/2023-07-11-000000_recipe_ingredients_amount_type/: down.sql  up.sql
backend/migrations/2023-07-11-000000_recipe_tag/: down.sql  up.sql
backend/migrations/2023-07-11-000000_recipe_user/: down.sql  up.sql
backend/migrations/2023-07-11-000000_tag/: up.sql
backend/src/: apidoc.rs  controller.rs  database.rs  jwt.rs  main.rs  models.rs  schema.rs  tests.rs
backend/src/controllers/: bookmark_controller.rs  mod.rs  recipe_controller.rs  recipe_create_controller.rs  recipe_helper.rs  recipe_update_controller.rs  tag_controller.rs  user_controller.rs
backend/src/models/: mod.rs  recipe.rs  recipe_dto.rs  user.rs
documentation/: authentication.md  diesel.md  index.html  (+1 more)
(+26 files in other folders)
