[package]
name = "crimson-eagle_recipe_backend"
description = "The backend API written in Rust for Crimson Eagle's Recipe App."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.6.0-alpha2"
rocket_okapi = {  version = "0.8.0-rc.3", features = ["rapidoc"] }
dotenvy = "0.15"
chrono = { version = "0.4.24", features = ["serde"] }
bcrypt = "0.14.0"
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
jsonwebtoken = "8.1.1"
utoipa = { version = "3.3.0", features = ["chrono", "preserve_order", "rocket_extras"] }
